--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mb-5{
+margin-bottom: 2rem;    
+}
+.mt-5{
+    margin-top: .5rem;
+}
+
+.resize img {
+    width: 50%; /* you can use % */
+    height: auto;
+    margin: auto;
+}
+.py-12 {
+    padding-bottom: 2rem !important;
+  }
+  .button-back{
+    margin-left: 1.5rem;    
+    margin-bottom: 1.5rem;
+}
+.small-image{
+    width: 50%; /* you can use % */
+    height: auto;
+}
