--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,3 +25,16 @@ margin-bottom: 2rem;
     width: 50%; /* you can use % */
     height: auto;
 }
+.form-search{
+display: flex;
+justify-content: center;
+}
+.header-item{
+    display: flex;
+    width: 100%;
+justify-content: space-between;
+}
+.h2-item{
+    display: flex;
+    align-items: center;
+}
