--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,3 +38,14 @@ justify-content: space-between;
     display: flex;
     align-items: center;
 }
+.index-items{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+}
+.link-items:hover{
+    font-weight: 900;
+}
+.bi-trash3-fill:hover path{
+    fill:red;
+}
